[package]
name = "monitor_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dfsql = { version = "0.13", default-features = false }
hdv = { version = "0.5", optional = true }
polars = { version = "0.44", features = ["lazy"] }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.39" }
slotmap = "1"

[features]
default = []
