[package]
name = "monitor_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dfsql = { version = "0.14", default-features = false }
hdv = { version = "0.6", optional = true }
polars = { version = "0.45", features = ["lazy"] }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.56" }
slotmap = "1"

[features]
default = []
