[package]
name = "monitor_table"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dfsql = { version = "0.15", default-features = false }
hdv = { version = "0.7", optional = true }
# "dtype-i128": https://github.com/pola-rs/polars/issues/22733
polars = { version = "0.47", features = ["lazy", "dtype-categorical", "dtype-i128"] }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.59" }
slotmap = "1"

[features]
default = []
